# securities-lending

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: pipeline.yaml  universe.yaml
docs/: ALT_DATA_CONNECTION.md
notebooks/: 01_data_pipeline.ipynb  02_short_interest_signals.ipynb  03_borrow_rate_factor_analysis.ipynb  04_squeeze_detection.ipynb
scripts/: build_features.py  fetch_data.py  run_analysis.py  run_retail_squeeze_backtest.py  run_squeeze_model.py
src/securities_lending/: __init__.py
src/securities_lending/analysis/: __init__.py  fama_macbeth.py  ic_analysis.py  interaction_backtest.py  portfolio_sorts.py
src/securities_lending/features/: __init__.py  borrow_proxy.py  microstructure.py  retail_attention.py  short_metrics.py
src/securities_lending/ingestion/: __init__.py  base.py  borrow_rates.py  finra_regsho.py  finra_short_interest.py  prices.py
src/securities_lending/models/: __init__.py  evaluation.py  squeeze_detector.py
src/securities_lending/utils/: __init__.py  calendar.py  config.py  winsorize.py
src/securities_lending/viz/: __init__.py  plots.py
tests/: conftest.py
tests/test_analysis/: test_ic_analysis.py  test_interaction_backtest.py  test_portfolio_sorts.py
tests/test_features/: test_borrow_proxy.py  test_retail_attention.py  test_short_metrics.py
